-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8, 6.9
-
None
-
-
7e9eebe3b (dev), d4105bae8 (dev), 2346edfd6 (dev), 9b5bf0531 (6.8)
This test is moving to blacklist and this ticket is created to fix and take it back into CI.
- Something is not working properly before this test fails --> CMake Error visible
- and possibly because of that this failing test is not found from CI metrics as a failing or flaky test: https://testresults.qt.io/grafana/d/d8bebf9c-6e1c-4bff-a214-8d506943f23c/new-flaky-crashed-failed-tests?orgId=1&var-branch=1&var-test_case_n=TestLinkStaticQmlModule&var-test_function_n=All&var-group_by_interval=1d
- That is also the reason why this failing test was not detected before while monitoring HealthCheck failings via metrics
- And we cannot track how long this has been failing, at least from the CI metrics
Target: windows-11_22h2-arm64-msvc2022
HealthCheck: https://testresults.qt.io/coin/integration/qt/qt5/tasks/nightly1725399901 Wed 4.9.
qt/qtdeclarative tests
TestLinkStaticQmlModule:
Log for qt/qtdeclarative (Insignificant)Failed to run tests. 1370: C:/Users/qt/work/qt/qtdeclarative_standalone_tests/tests/auto/cmake/test_internal_singleton, which should end in the same target path, but doesn't. Tooling such as qmllint may not work correctly. Call Stack (most recent call first): C:/Users/qt/work/install/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:2928 (_qt_internal_target_enable_qmllint) C:/Users/qt/work/install/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:891 (qt6_target_qml_sources) C:/Users/qt/work/install/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:1148 (qt6_add_qml_module) CMakeLists.txt:18 (qt_add_qml_module) 6: 6: CMake Error at C:/Users/qt/work/install/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:2992 (message): 1759: Promoting target to global: 'Qt6::rcc' Promoting target to global: 'Qt6::tracepointgen' Promoting target to global: 'Qt6::tracegen' Promoting target to global: 'Qt6::cmake_automoc_parser' Promoting target to global: 'Qt6::qlalr' Promoting target to global: 'Qt6::qtpaths' Promoting target to global: 'Qt6::androiddeployqt' Promoting target to global: 'Qt6::androidtestrunner' Promoting target to global: 'Qt6::windeployqt' Promoting target to global: 'Qt6::qmake' CMake Error at C:/Users/qt/work/install/lib/cmake/Qt6Qml/Qt6QmlPublicCMakeHelpers.cmake:18 (message): 3084: ********* Start testing of TestLinkStaticQmlModule ********* FAIL! : TestLinkStaticQmlModule::canRun() 'QQuickTest::showView(view, QUrl(u"qrc:/qt/qml/Derived/qml/main.qml"_qs))' returned FALSE. () C:\Users\qt\work\qt\qtdeclarative\tests\auto\cmake\test_link_qml_module_without_target\main.cpp(39) : failure location PASS : TestLinkStaticQmlModule::cleanupTestCase() Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 5123ms
This hidden test fail is currently blocking Windows on ARM to get blocking in CI:
it failed integration 2 times:
- is covered by
-
QTQAINFRA-6210 Report crashes that are discoverable because of the information in ctest_results table
-
- Open
-
- is required for
-
QTBUG-127935 Windows on Arm - first release with development on desktop
-
- Open
-
- relates to
-
QTQAINFRA-6109 Add Windows on ARM to CI
-
- Closed
-
-
QTQAINFRA-6558 Testresults: test_internal_singleton should have failed
-
- Closed
-
- resulted from
-
QTBUG-127836 Windows ARM: Multimedia - tst_QMediaFormat::testResolveForEncoding fails
-
- Closed
-
- resulted in
-
QTQAINFRA-6556 CI Metrics: New test failing found which is not visible or found from CI Metrics
-
- Closed
-