QuickTestUtils: Log reason for showView() failing

There are a number of reasons for QQuickTest::showView() to fail. Most
of the time we want to see the details in the CI log so that we have a
chance of figuring out what is going on.

Task-number: QTBUG-128645
Change-Id: I59d80a24d64257364a4a2dd98389b871f5284b3f
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>